fix layout issues

--- a/static/email-signature/assets/css/main.css
+++ b/static/email-signature/assets/css/main.css
@@ -1,14 +1,14 @@
 html {
   font-size: 62.5%;
-  width: 100%;
   height: 100%;
 }
 
 body {
+  box-sizing: border-box;
   position: relative;
   padding: 0 8px;
+  margin: 0;
   font-size: 1.2rem;
-  width: 100%;
   height: 100%;
   background-color: white;
 }
@@ -32,10 +32,10 @@ a {
   background-color: white;
   box-sizing: border-box;
   max-width: 800px;
-  padding: 48px 24px 32px;
+  padding: 16px 24px 32px;
   box-shadow: 0 19px 38px rgba(0,0,0,0.12), 0 15px 12px rgba(0,0,0,0.12);
   border-radius: 2px;
-  margin: -32px auto 0;
+  margin: 0 auto;
   font-family: 'Roboto', sans-serif;
 }
 
